--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment
-AZURE_OPENAI_API_KEY=your-key
-AZURE_OPENAI_API_VERSION=2024-02-01-previw
-AZURE_OPENAI_ENDPOINT=https://your-endpoint.openai.azure.com/
+OPENAI_API_KEY=your-openai-key
+OPENAI_API_BASE_URL=https://api.openai.com/v1
