--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,23 @@
 [project]
-name = "project"
+name = "visirag"
 version = "0.1.0"
-description = "Add your description here"
+description = "Multimodal Retrieval-Augmented Generation system with PDF support"
 readme = "README.md"
 requires-python = ">=3.12"
+
 dependencies = [
-    "backend>=0.2.4.1",
-    "dotenv>=0.9.9",
-    "pymupdf>=1.26.4",
-    "streamlit>=1.49.1",
+    "streamlit>=1.29.0",
+    "python-dotenv>=1.0.0",
+    "pymupdf>=1.23.5",
+    "pdfplumber>=0.10.3",
+    "pdfminer.six>=20221105",
+    "pillow>=10.0.0",
+    "matplotlib>=3.8.0",
+    "langchain>=0.2.0",
+    "langchain-openai>=0.1.0",
+    "langchain-community>=0.2.0",
+    "chromadb>=0.4.22",
+    "sentence-transformers>=2.2.2",
+    "openai>=1.12.0",
+    "tqdm>=4.65.0",
 ]
